[package]
name = "site-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }

probe = { path = "../probe", optional = true }
values = { path = "../values" }
serde = "1.0.209"
leptos-use = { git = "https://github.com/Synphonyte/leptos-use.git", branch = "leptos-0.7" }
web-sys = { version = "0.3.70", features = ["Clipboard"] }
wasm-bindgen-futures = "0.4.43"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr", "leptos/tracing", "leptos_meta/ssr", "leptos_router/ssr",
  "dep:leptos_axum", "dep:probe", "leptos-use/ssr",
]
